@@ -1,127 +1,0 @@
-language0=EN
-language0.name=English
-language0.mnemonic=E
-language0.icon=usa.gif
-#alternative flags for different countries, | is separator, 2 characters long ISO country code
-language0.flags=UK=uk.gif|CA=ca.gif
-language1=CS
-language1.name=\u010ce\u0161tina
-language1.mnemonic=N
-language1.icon=cz.gif
-language2=FR
-language2.name=Fran\u00e7ais
-language2.mnemonic=F
-language2.icon=france.gif
-language3=HU
-language3.name=Magyar nyelv
-language3.mnemonic=M
-language3.icon=hungary.gif
-language4=DE
-language4.name=Deutsch
-language4.mnemonic=D
-language4.icon=germany.gif
-language5=ES
-language5.name=Espa\u00f1ol
-language5.mnemonic=S
-language5.icon=spain.gif
-language6=SK
-language6.name=Sloven\u010dina
-language6.mnemonic=V
-language6.icon=slovakia.gif
-language7=ZH
-language7.country=CN
-language7.name=\u7B80\u4F53\u5B57
-language7.mnemonic=C
-language7.icon=china.gif
-language8=ZH
-language8.country=TW
-language8.name=\u6B63\u9AD4\u5B57
-language8.mnemonic=T
-language8.icon=taiwan.gif
-language9=JA
-language9.country=JP
-language9.name=\u65E5\u672C\u8A9E
-language9.mnemonic=J
-language9.icon=japan.gif
-language10=IN
-language10.name=Bahasa Indonesia
-language10.mnemonic=I
-language10.icon=indonesia.gif
-language11=PL
-language11.name=Polski
-language11.mnemonic=P
-language11.icon=poland.gif
-language12=UA
-language12.name=\u0423\u043a\u0440\u0430\u0457\u043d\u0441\u044c\u043a\u0430
-language12.mnemonic=U
-language12.icon=ukraine.gif
-language13=IT
-language13.name=Italiano
-language13.mnemonic=I
-language13.icon=italy.gif
-language14=DA
-language14.name=Dansk
-language14.mnemonic=K
-language14.icon=denmark.gif
-language15=PT
-language15.country=BR
-language15.name=Portugu\u00eas do Brasil
-language15.mnemonic=B
-language15.icon=brazil.gif
-language16=RU
-language16.name=\u0420\u0443\u0441\u0441\u043a\u0438\u0439
-language16.mnemonic=R
-language16.icon=russia.gif
-language17=TR
-language17.name=T\u00fcrk\u00e7e
-language17.mnemonic=\u00e7
-language17.icon=turkey.gif
-language18=FA
-language18.name=\u0641\u0627\u0631\u0633\u06CC
-language18.mnemonic=F
-language18.icon=iran.gif
-language19=BS
-language19.name=Bosanski
-language19.mnemonic=B
-language19.icon=bosnia.gif
-language20=NL
-language20.name=Nederlands
-language20.mnemonic=N
-language20.icon=netherlands.jpg
-language21=GR
-language21.name=\u03B5\u03BB\u03BB\u03B7\u03BD\u03B9\u03BA\u03AC
-language21.mnemonic=G
-language21.icon=gr.gif
-language22=AR
-language22.name=\u0627\u0644\u0639\u0631\u0628\u064a\u0629
-language22.mnemonic=G
-language22.icon=eg.gif
-language23=HR
-language23.name=Hrvatski
-language23.mnemonic=H
-language23.icon=hr.gif
-language24=SI
-language24.name=Slovenski
-language24.mnemonic=S
-language24.icon=si.gif
-language25=RO
-language25.name=Rom\u00e2n\u0103
-language25.mnemonic=R
-language25.icon=romania.gif
-language26=HE
-language26.name=\u05e2\u05d1\u05e8\u05d9\u05ea
-language26.mnemonic=H
-language26.icon=israel.gif
-language27=KO
-language27.country=KR
-language27.name=\uD55C\uAD6D\uC5B4
-language27.mnemonic=K
-language27.icon=korea.gif
-language28=BG
-language28.name=\u0411\u044A\u043B\u0433\u0430\u0440\u0441\u043A\u0438
-language28.mnemonic=B
-language28.icon=bulgaria.gif
-language29=FI
-language29.name=Suomi
-language29.mnemonic=S
-language29.icon=finland.gif
